# healthsim-agent

./: .gitignore  CHANGELOG.md  CLAUDE-PROJECT-INSTRUCTIONS.md  CONTRIBUTING.md  CURRENT-WORK.md  DEVELOPMENT-PLAN.md  README.md  bob_roberts_hl7v2_adt_a01.json  healthsim-agent.code-workspace  pyproject.toml
.autoresearch/: run_all.md
docs/: ENTITY-TYPE-AUDIT.md  FULL-PARITY-IMPLEMENTATION-PLAN.md  GAP-ANALYSIS.md  HONEST-ASSESSMENT.md  ISSUES.md  PHASE-6-TESTING-PLAN.md  PHASE-7-PROGRESS.md  PHASE-7-STATUS.md  README.md  RELEASE-EVALUATION.md  SKILLS-MANAGEMENT-SYSTEM.md
docs/archive/: README.md
docs/contributing/: README.md  code-style.md  development-setup.md  testing-guide.md
docs/design/: cli-ux-mockup.html
docs/getting-started/: README.md  first-session.md  installation.md  quick-reference.md  troubleshooting.md
docs/guides/: README.md  cross-product-guide.md  membersim-guide.md  networksim-guide.md  patientsim-guide.md  populationsim-guide.md  rxmembersim-guide.md  state-management-guide.md  trialsim-guide.md
docs/reference/: README.md  cli-reference.md  code-systems.md  output-formats.md  tools-reference.md
examples/: README.md
examples/advanced/: batch-generation.md  clinical-trial-protocol.md  custom-skills.md  full-data-pipeline.md  integration-testing.md  population-study.md  star-schema-analytics.md
examples/basic/: claims-generation.md  patient-generation.md  pharmacy-claims.md  pharmacy-generation.md  provider-search.md
skills/patientsim/: spec-created-skill.md  test-skill-temp.md
src/healthsim_agent/: __init__.py  __main__.py  agent.py  main.py
tests/integration/: __init__.py  test_format_tools.py
tests/unit/: test_agent_basic.py  test_auto_naming.py  test_auto_persist.py  test_auto_persist_extended.py  test_benefits_accumulators.py  test_cohort_tools.py  test_config_dimensional.py  test_database.py  test_db_connection_extended.py  test_db_queries.py  test_dim_date.py  test_dimensional_config.py  test_distributions.py  test_entity_provenance.py  test_export_tools.py  test_format_tools.py  test_format_tools_coverage.py  test_format_tools_extended.py  test_format_tools_transforms.py  test_format_transforms_extended.py  test_formats_ccda.py  test_formats_mimic.py  test_formats_ncpdp.py  test_handlers.py  (+65 more)
(+177 files in other folders)
